--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     Since 2013, I've spent my summers working on the pristine shores of Lake Fairlee at Horizons Day Camp. Horizons is one of the camps run by The Aloha Foundation. There, I am a swimming instructor and lifeguard, as well as a Kahuna - a member of the senior leadership team. In fact, I was the youngest Kahuna ever appointed to the group, and the first former camper to become a Kahuna. I've used my position as a young leader to bring new perspectives to the group, and I've used my software engineering abilities to develop new, tailor-made productivity solutions for our team.
                 </p>
                 <p>
-                    Before Brandeis I atteneded Rivendell Academy in Orford, NH. In 2015 my Vex team won the NH/VT state championship for the game Skyrise. Clips from our best positional finishes can be found in the <a href="#time-machine">time machine</a>.
+                    Before Brandeis I attended Rivendell Academy in Orford, NH. In 2015 my Vex team won the NH/VT state championship for the game Skyrise. Clips from our best positional finishes can be found in the <a href="#time-machine">time machine</a>.
                 </p>
                 <p>
                     I'm in the middle of my post-college job hunt! I'm looking for Junior/ Entry-Level Software Engineering positions at large companies or startups (both excite me!). My concentration so far has been in robotics, but I'm open and eager to learn new skills and dive into new industries. Please peruse my portfolio below to discover what I've been working on, and check out my <a href="https://linkedin.com/in/natedimick">LinkedIn profile</a>.
@@ -115,6 +115,7 @@
         <footer id="base">
             <ol>
                 <li>There might by typos on this page. Sorry.</li>
+                <li>Hosted by Github Pages</li>
                 <li><a href="https://www.fontspace.com/memories-font-f25917">Fun Mode Font: MemoriesRegular</a></li>
                 <li><a href="https://hellveticafont.com/">Evil Mode Font: Hellvetica</a></li>
                 <li>Not Copyright Nate Dimick 2020</li>
