I need a job update

--- a/index.html
+++ b/index.html
@@ -49,17 +49,21 @@
                 <img src="./Pictures/me.jpg" alt="me" id="my-picture">
             </div>
             <div class="project-text">
+                <h1>I Need a Job</h1>
                 <p>
-                    In May of 2020 I graduated from Brandeis University with a B.S. in Computer Science. While at Brandeis I was involved in the Autonomous Robotics Lab (ARL), where I worked on projects including the Campus Rover software stack, the Campus Rover Model 4 Hardware Interface, and the Robot Service Bridges for connecting ROS with other programming languages and frameworks, like Unity, on remote PCs. 
+                    Hi there! I need a job. If you've come here from my resume via a job application, thank you! Please browse my curated portfolio below and click as many links as you can!
                 </p>
                 <p>
-                    Since 2013, I've spent my summers working on the pristine shores of Lake Fairlee at Horizons Day Camp. Horizons is one of the camps run by The Aloha Foundation. There, I am a swimming instructor and lifeguard, as well as a Kahuna - a member of the senior leadership team. In fact, I was the youngest Kahuna ever appointed to the group, and the first former camper to become a Kahuna. I've used my position as a young leader to bring new perspectives to the group, and I've used my software engineering abilities to develop new, tailor-made productivity solutions for our team.
+                    I'm interested in entry level software engineering opportunities. I'm also open to the prospect of interning. All I need is for one company to give me a chance - will it be yours?
                 </p>
                 <p>
-                    Before Brandeis I attended Rivendell Academy in Orford, NH. In 2015 my Vex team won the NH/VT state championship for the game Skyrise. Clips from our best positional finishes can be found in the <a href="#time-machine">time machine</a>.
+                    My foremost passions are education, robotics and games. I like building websites, especially backends. I'm a huge fan of making and using free APIs - if code can be open source, why should information APIs hide behind paywalls?
                 </p>
                 <p>
-                    I'm in the middle of my post-college job hunt! I'm looking for Junior/ Entry-Level Software Engineering positions at large companies or startups (both excite me!). My concentration so far has been in robotics, but I'm open and eager to learn new skills and dive into new industries. Please peruse my portfolio below to discover what I've been working on, and check out my <a href="https://linkedin.com/in/natedimick">LinkedIn profile</a>.
+                    I'm looking for a company with a healthy, employee-empowering, supportive and collaborative culture, with a fantastic and diverse community of many interests. I want to work on a focused, inspiring product with a clear vision, purpose, and noble use cases. I'd like to learn and grow rapidly as a person and a professional, in an environment where I can take risks, make mistakes, and overcome challenges. Most of all, I want to have fun and be happy. Does this sound like your company? Then I want to work for your company!
+                </p>
+                <p>
+                    My resume doesn't tell my entire story or fully capture what I'm capable of, it's just the tip of the iceberg. Schedule a Zoom call with me and you'll find out what I'm made of, who I really am and why I'll be an incredible member on any team. Why not <a href="natedimickresume.pdf" download>download my most recent resume</a> for my contact info, then drop me a line on LinkedIn or email and let's start a conversation about how I can inject my hard work and passion into your team and product.
                 </p>
             </div>
         </section>
