--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             <p>
                 The titles of each project are links to the source code on Github!
             </p>
+            <p>
+                <strong>Warning!</strong> I am not a talented artist, nor do I consider myself good at naming things.
+            </p>
             <ol class="nav" id="p-links">
                 <!-- Will be populated with links to projects when rendered-->
             </ol>
