--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title id="title">Nate Dimick's Webpage</title>
+        <title id="title">Nate Dimick</title>
         <link rel="stylesheet" href="./cloudyv2.css">
         <link rel="stylesheet" href="./memfont.css">
         <link rel="stylesheet" href="./hellvetica.css">
@@ -49,21 +49,14 @@
                 <img src="./Pictures/me.jpg" alt="me" id="my-picture">
             </div>
             <div class="project-text">
-                <h1>I Need a Job</h1>
                 <p>
-                    Hi there! I need a job. If you've come here from my resume via a job application, thank you! Please browse my curated portfolio below and click as many links as you can!
+                    I'm a young software engineer with the plenty of dreams and ambition. I grew up in Orford, New Hampshire next to the Connecticut River and attended Rivendell Academy for high school. At Rivendell I got my first taste of robotics with Vex, where I won the 2015 Vermont and New Hampshire Region Championship. During my summers, I worked at Horizons Day Camp as a lifeguard and swimming instructor and loved every single day of it. I received my Bachelor's Degree from Brandeis University in May of 2020. At Brandeis, I played a few club sports and rekindled my relationship with robotics in the Autonomous Robotics Lab. I continued to spend my summers at Horizons as well, where I climbed the ranks and became the youngest Kahuna (Senior counselor, director's inner circle) in camp history. 
                 </p>
                 <p>
-                    I'm interested in entry level software engineering opportunities. I'm also open to the prospect of interning. All I need is for one company to give me a chance - will it be yours?
+                    So my skill set is pretty diverse. I have a passion for robotics, but I'm also a capable full stack web developer with a focus on the backend and anything that doesn't touch CSS. I also have foundational educational skills from teaching swim lessons and spending 7 summers working with children. I love to hack and quickly make my silly ideas into realities.
                 </p>
                 <p>
-                    My foremost passions are education, robotics and games. I like building websites, especially backends. I'm a huge fan of making and using free APIs - if code can be open source, why should information APIs hide behind paywalls?
-                </p>
-                <p>
-                    I'm looking for a company with a healthy, employee-empowering, supportive and collaborative culture, with a fantastic and diverse community of many interests. I want to work on a focused, inspiring product with a clear vision, purpose, and noble use cases. I'd like to learn and grow rapidly as a person and a professional, in an environment where I can take risks, make mistakes, and overcome challenges. Most of all, I want to have fun and be happy. Does this sound like your company? Then I want to work for your company!
-                </p>
-                <p>
-                    My resume doesn't tell my entire story or fully capture what I'm capable of, it's just the tip of the iceberg. Schedule a Zoom call with me and you'll find out what I'm made of, who I really am and why I'll be an incredible member on any team. Why not <a href="natedimickresume.pdf" download>download my most recent resume</a> for my contact info, then drop me a line on LinkedIn or email and let's start a conversation about how I can inject my hard work and passion into your team and product.
+                    Coding all day isn't my perfect day, though. I like to play video games to unwind. I long for good board game nights with friends with fierce and friendly competition. In fair weather, I like to hike and kayak to get away from screens. While I'm not the most athletic individual, I'll jump into almost any game, especially basketball, spikeball, or ultimate frisbee.
                 </p>
             </div>
         </section>
@@ -121,7 +114,6 @@
         </section>
         <footer id="base">
             <ol>
-                <li>There might by typos on this page. Sorry.</li>
                 <li>Hosted by Github Pages</li>
                 <li><a href="https://www.fontspace.com/memories-font-f25917">Fun Mode Font: MemoriesRegular</a></li>
                 <li><a href="https://hellveticafont.com/">Evil Mode Font: Hellvetica</a></li>
