--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </header>
         <section>
             <h1>
-                About Me
+                
             </h1>
         </section>
         <section id="holiday-box">
@@ -49,6 +49,7 @@
                 <img src="./Pictures/me.jpg" alt="me" id="my-picture">
             </div>
             <div class="project-text">
+                <h1>About Me</h1>
                 <p>
                     I'm a young software engineer with the plenty of dreams and ambition. I grew up in Orford, New Hampshire next to the Connecticut River and attended Rivendell Academy for high school. At Rivendell I got my first taste of robotics with Vex, where I won the 2015 Vermont and New Hampshire Region Championship. During my summers, I worked at Horizons Day Camp as a lifeguard and swimming instructor and loved every single day of it. I received my Bachelor's Degree from Brandeis University in May of 2020. At Brandeis, I played a few club sports and rekindled my relationship with robotics in the Autonomous Robotics Lab. I continued to spend my summers at Horizons as well, where I climbed the ranks and became the youngest Kahuna (Senior counselor, director's inner circle) in camp history. 
                 </p>
