--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section id="holiday-box">
             <div>
-                <h2 ><a href="https://fun-holiday-api.herokuapp.com" id="holiday"></a></h2>
+                <h2 ><a href="https://national-api-day.herokuapp.com" id="holiday"></a></h2>
                 <button style="display: none;" id="new-day">New Holiday!</button>
             </div>
         </section>
@@ -51,13 +51,13 @@
             <div class="project-text">
                 <h1>About Me</h1>
                 <p>
-                    I'm a young software engineer with the plenty of dreams and ambition. I grew up in Orford, New Hampshire next to the Connecticut River and attended Rivendell Academy for high school. At Rivendell I got my first taste of robotics with Vex, where I won the 2015 Vermont and New Hampshire Region Championship. During my summers, I worked at Horizons Day Camp as a lifeguard and swimming instructor and loved every single day of it. I received my Bachelor's Degree from Brandeis University in May of 2020. At Brandeis, I played a few club sports and rekindled my relationship with robotics in the Autonomous Robotics Lab. I continued to spend my summers at Horizons as well, where I climbed the ranks and became the youngest Kahuna (Senior counselor, director's inner circle) in camp history. 
+                    I like to write code that turns silly ideas into fun realities. Those don't pay the bills, though, so I work at a R & D company to turns compassionate ideas into realities that dramatically change lives. 
                 </p>
                 <p>
-                    So my skill set is pretty diverse. I have a passion for robotics, but I'm also a capable full stack web developer with a focus on the backend and anything that doesn't touch CSS. I also have foundational educational skills from teaching swim lessons and spending 7 summers working with children. I love to hack and quickly make my silly ideas into realities.
+                    I grew up in Orford, New Hampshire next to the Connecticut River and attended Rivendell Academy for high school. At Rivendell I got my first taste of robotics with Vex, where I won the 2015 Vermont and New Hampshire Region Championship. During my summers, I worked at Horizons Day Camp as a lifeguard and swimming instructor and loved every single day of it. I received my Bachelor's Degree from Brandeis University in May of 2020. At Brandeis, I played a few club sports and rekindled my relationship with robotics in the Autonomous Robotics Lab. I continued to spend my summers at Horizons as well, where I climbed the ranks and became the youngest Kahuna (Senior counselor in the director's inner advisory circle) in camp history. 
                 </p>
                 <p>
-                    Coding all day isn't my perfect day, though. I like to play video games to unwind. I long for good board game nights with friends with fierce and friendly competition. In fair weather, I like to hike and kayak to get away from screens. While I'm not the most athletic individual, I'll jump into almost any game, especially basketball, spikeball, or ultimate frisbee.
+                    I also like to play video games, go on hikes, play board games, and try new sports. I really enjoy frisbee, basketball and spikeball. 
                 </p>
             </div>
         </section>
