--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="tricks.js"></script>
         <meta charset="UTF-8">
         <meta name="description" content="Everything you need to know about Nathaniel (Nate) Dimick - Portfolio and More! (but not too much)">
-        <meta name="keywords" content="Nate Nathaniel J. Dimick Website Portfolio Orford Rivendell Brandeis Aloha Horizons">
+        <meta name="keywords" content="Nate Nathaniel J. Dimick Website Portfolio Orford Rivendell Brandeis Aloha Horizons Deka">
         <meta name=”robots” content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-site-verification" content="BnYoA-aVkFrik3jKktLjn15F5xg37WsT3bz8l_m5g-U" />
@@ -119,6 +119,7 @@
                 <li><a href="https://www.fontspace.com/memories-font-f25917">Fun Mode Font: MemoriesRegular</a></li>
                 <li><a href="https://hellveticafont.com/">Evil Mode Font: Hellvetica</a></li>
                 <li>Not Copyright Nate Dimick 2020</li>
+                <li>Last updated 6/4/21</li>
             </ol>
         </footer>
     </body>
