--- a/zoomwithme.html
+++ b/zoomwithme.html
@@ -2,8 +2,25 @@
 <html>
     <head>
         <meta http-equiv = "refresh" content = "1; url = https://us02web.zoom.us/j/8289292778?pwd=QXBkckl2dkhETXk4bTdUamJsNGhadz09" />
+        <link rel="stylesheet" href="./cloudyv2.css">
     </head>
     <body>
-        <h1>ZOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOM</h1>
+        <svg id="rain">
+        </svg>
+        <section>
+            <h1>Look</h1>
+            <h2>I understand too little, too late</h2>
+            <h3>I realize there are things you say and do</h3>
+            <h4>You can never take back</h4>
+            <h4><em> But what would you be if you didn't even try?</em></h4>
+            <h4>You have to try</h4>
+            <h4>So after a lot of thought</h4>
+            <h4>I'd like to reconsider</h4>
+            <h3>Please</h3>
+            <h2>If it's not too late</h2>
+            <h1>Make it a... <em>Cheese</em>burger</h1>
+            <h4>- Lyle Lovett, "Here I Am"</h4>
+        </section>
+        
     </body>
 </html>
