handful of stuff

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                 <li><a href="https://www.fontspace.com/memories-font-f25917">Fun Mode Font: MemoriesRegular</a></li>
                 <li><a href="https://hellveticafont.com/">Evil Mode Font: Hellvetica</a></li>
                 <li>Not Copyright Nate Dimick 2020</li>
-                <li>Last updated 6/4/21</li>
+                <li>Last updated 6/11/21</li>
+                <li><a href="umbrellas">My Umbrella Manifesto</a></li>
             </ol>
         </footer>
     </body>
