--- a/zoomwithme.html
+++ b/zoomwithme.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Nate's Custom Zoom Link</title>
         <meta http-equiv = "refresh" content = "1; url = https://us02web.zoom.us/j/8289292778?pwd=QXBkckl2dkhETXk4bTdUamJsNGhadz09" />
+        <meta name="description" content="click this link to get to my zoom room"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="./cloudyv2.css">
+        <link rel="icon" href="./Pictures/icon.png">
     </head>
     <body>
         <svg id="rain">
@@ -19,8 +24,11 @@
             <h3>Please</h3>
             <h2>If it's not too late</h2>
             <h1>Make it a... <em>Cheese</em>burger</h1>
-            <h4>- Lyle Lovett, "Here I Am"</h4>
+            <h4>- Lyle Lovett</h4>
         </section>
-        
+        <section>
+            <h4>This page should redirect in 1 second</h4>
+            <h4>If it doesn't, <a href="https://us02web.zoom.us/j/8289292778?pwd=QXBkckl2dkhETXk4bTdUamJsNGhadz09">click here</a></h4>
+        </section>
     </body>
 </html>
