--- a/umbrellas.html
+++ b/umbrellas.html
@@ -5,14 +5,17 @@
         <meta name="description" content="click this link to get to my zoom room"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./cloudyv2.css">
+        <link rel="stylesheet" href="./style/containers.css">
+        <link rel="stylesheet" href="./style/text.css">
+        <link rel="stylesheet" href="./style/special.css">
+        <link rel="stylesheet" href="./style/background.css">
         <link rel="icon" href="./Pictures/icon.png">
-        <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="tricks.js"></script>
     </head>
     <body>
-        <svg id="rain">
+        <svg id="canvas">
         </svg>
+        <script type="text/javascript" src="./scripts/background.js"></script>
         <section>
             <h1>I Hate Umbrellas</h1>
             <h2>This page stands as my umbrella manifesto, the strongest opinion that I have on any subject matter</h2>
