--- a/zoomwithme.html
+++ b/zoomwithme.html
@@ -6,12 +6,16 @@
         <meta name="description" content="click this link to get to my zoom room"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./cloudyv2.css">
+        <link rel="stylesheet" href="./style/containers.css">
+        <link rel="stylesheet" href="./style/text.css">
+        <link rel="stylesheet" href="./style/special.css">
+        <link rel="stylesheet" href="./style/background.css">
         <link rel="icon" href="./Pictures/icon.png">
     </head>
     <body>
-        <svg id="rain">
+        <svg id="canvas">
         </svg>
+        <script type="text/javascript" src="./scripts/background.js"></script>
         <section>
             <h1>Look</h1>
             <h2>I understand too little, too late</h2>
