touch up around the edges

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="project-text">
                     <h1>About Me</h1>
-                    <p>I'm a software engineer. I'll write this later</p>
+                    <p>I'm a software engineer. This page is undergoing upgrades. I'll write this section later</p>
                 </div>
 
             </section>
