add new pages, re-implement mode change

--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
                 </div>
                 <div class="project-text">
                     <h1>About Me</h1>
-                    <p>I'm a software engineer. This page is undergoing upgrades. I'll write this section later</p>
+                    <p>I'm a <span id="rotating-title">Software Engineer</span>. This page is undergoing upgrades. I'll write this section later</p>
                 </div>
 
             </section>
             <section id="slider-zone">
-
+                <h1>Fun Level</h1>
+                <h2 id="fun-level">Current Level: Standard</h2>
+                <input type="range" name="" min="1" max="3" value="2" id="fun-select">
+                <script src="./scripts/names.js"></script>
+                <script src="./scripts/fun.js"></script>
             </section>
             <section>
                 <h1>Things I've Worked On</h1>
@@ -60,10 +64,12 @@
                 <ol>
                     <li>Hosted by Github Pages</li>
                     <li><a href="https://www.fontspace.com/memories-font-f25917">Fun Mode Font: MemoriesRegular</a></li>
-                    <li><a href="https://hellveticafont.com/">Evil Mode Font: Hellvetica</a></li>
+                    <li><a href="https://hellveticafont.com/">Un-fun Mode Font: Hellvetica</a></li>
                     <li>Not Copyright Nate Dimick 2021</li>
-                    <li>Last updated 9/4/21</li>
+                    <li>Last updated 11/20/21</li>
                     <li><a href="umbrellas">My Umbrella Manifesto</a></li>
+                    <li><a href="pizza">Pizza Ratings</a></li>
+                    <li><a href="hockey">Hockey Strategy</a></li>
                 </ol>
             </footer>
         </div>
