--- a/umbrellas.html
+++ b/umbrellas.html
@@ -10,12 +10,12 @@
         <link rel="stylesheet" href="./style/special.css">
         <link rel="stylesheet" href="./style/background.css">
         <link rel="icon" href="./Pictures/icon.png">
-        <script src="tricks.js"></script>
     </head>
     <body>
         <svg id="canvas">
         </svg>
         <script type="text/javascript" src="./scripts/background.js"></script>
+        <header><a href="/"><div><p>Back to the main page</p></div></a></header>
         <section>
             <h1>I Hate Umbrellas</h1>
             <h2>This page stands as my umbrella manifesto, the strongest opinion that I have on any subject matter</h2>
