bio and font update

--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
                 </div>
                 <div class="project-text">
                     <h1>About Me</h1>
-                    <p>I'm a <span id="rotating-title">Software Engineer</span>. This page is undergoing upgrades. I'll write this section later</p>
+                    <p>I'm a <span id="rotating-title">Software Engineer</span>. Here are five fast and fun facts that should tell you everything you need to know about me.</p>
+                    <p>1. My current car is a 2012 Prius and I hate it.</p>
+                    <p>2. My favorite video game genres are RPGs, Adventure, Strategy, and Platformers.</p>
+                    <p>3. I have no siblings and all my first cousins are 25+ years older than me.</p>
+                    <p>4. I don't drink coffee or soda.</p>
+                    <p>5. When Ben & Jerry's re-released Candy Bar Pie as slices I got way too excited and was super let down by how they tasted nothing like the original limited batch from 2014.</p>
                 </div>
-
             </section>
             <section id="slider-zone">
                 <h1>Fun Level</h1>
