--- a/index.html
+++ b/index.html
@@ -39,21 +39,16 @@
                 <div class="project-img">
                     <img src="./Pictures/me.jpg" alt="me" id="my-picture">
                 </div>
-                <div class="project-text">
+                <div class="project-text" id="bio-body">
                     <h1>About Me</h1>
                     <p>I'm a <span id="rotating-title">Software Engineer</span>. Here are five fast and fun facts that should tell you everything you need to know about me.</p>
-                    <p>1. My current car is a 2012 Prius and I hate it.</p>
-                    <p>2. My favorite video game genres are RPGs, Adventure, Strategy, and Platformers.</p>
-                    <p>3. I have no siblings and all my first cousins are 25+ years older than me.</p>
-                    <p>4. I don't drink coffee or soda.</p>
-                    <p>5. When Ben & Jerry's re-released Candy Bar Pie as slices I got way too excited and was super let down by how they tasted nothing like the original limited batch from 2014.</p>
+                    <script src="./scripts/lists.js"></script>
                 </div>
             </section>
             <section id="slider-zone">
                 <h1>Fun Level</h1>
                 <h2 id="fun-level">Current Level: Standard</h2>
                 <input type="range" name="" min="1" max="3" value="2" id="fun-select">
-                <script src="./scripts/names.js"></script>
                 <script src="./scripts/fun.js"></script>
             </section>
             <section>
