a/an for fun mode title

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="project-text" id="bio-body">
                     <h1>About Me</h1>
-                    <p>I'm a <span id="rotating-title">Software Engineer</span>. Here are five fast and fun facts that should tell you everything you need to know about me.</p>
+                    <p>I'm <span id="rotating-title">a Software Engineer</span>. Here are five fast and fun facts that should tell you everything you need to know about me.</p>
                     <script src="./scripts/lists.js"></script>
                 </div>
             </section>
