--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h1 class="not-s12n">S12n Mode</h1>
                 <div style="text-align: center;">
                     <input type="checkbox" name="s12n" id="s12n-toggle"><label for="s12n-toggle"></label>
-                    <a href="https://en.wikipedia.org/wiki/Numeronym" class="s12n">W2t t1e f2k is S12n?</a>
+                    <a href="https://en.wikipedia.org/wiki/Numeronym" class="s12n">W2t the f2k is S12n?</a>
                 </div>
             </section>
             <section>
