mainly a pizza ratings update

--- a/pizza.html
+++ b/pizza.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Colatina Scale</title>
+        <title>The Coli Index</title>
         <meta name="description" content="My Definitive Pizze Ratings"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
@@ -21,11 +21,46 @@
         </header>
         <section>
             <p>
-                The Colatina Index (Col-I) is my rating system for Pizza Places. It rates all pizza relative to The Colatina Exit in Bradford, Vermont. The Colatine Exit, therefore, has a Col-I Score of 1. Other pizza places are rated on their relative quality compared to The Colatina. Pizza worse than The Colatina will be scored from 0 to 1. Pizza better than The Colatina will have a score greater than 1. A score of 1.1 can be considered 10% better than Colatina's pizza. A score of 0.5 is half as good.
+                The Colatina Index (Col-I) is my rating system for Pizza Places. It rates all pizza relative to The Colatina Exit in Bradford, Vermont. The Colatina Exit, therefore, has a Col-I Score of 1. Other pizza places are rated on their relative quality compared to The Colatina. Pizza worse than The Colatina will be scored from 0 to 1. Pizza better than The Colatina will have a score greater than 1. A score of 1.1 can be considered 10% better than Colatina's pizza. A score of 0.5 is half as good.
             </p>
             <p>
                 This scale does not say that Colatina is the best pizza, but rather the the Colatina Exit's pizza is the standard that all places should strive to match or exceed. 
             </p>
+        </section>
+        <section>
+            <h2>
+                Score Brackets
+            </h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Score Range</th>
+                        <th>Pizza Quality</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>&gt;1.0</td>
+                        <td>Excellent Pizza</td>
+                    </tr>
+                    <tr>
+                        <td>1.0 to 0.75</td>
+                        <td>Great Pizza</td>
+                    </tr>
+                    <tr>
+                        <td>0.75 to 0.60</td>
+                        <td>Okay Pizza</td>
+                    </tr>
+                    <tr>
+                        <td>0.60 to 0.35</td>
+                        <td>Disappointing Pizza</td>
+                    </tr>
+                    <tr>
+                        <td> &lt;0.35</td>
+                        <td>Disgusting Pizza</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <section>
             <h2>
@@ -58,7 +93,7 @@
                     <tr>
                         <td>Stella's Italian Kitchen and Market</td>
                         <td>Lyme, NH</td>
-                        <td>0.83</td>
+                        <td>0.87</td>
                     </tr>
                     <tr>
                         <td>Ziggy's Pizza</td>
@@ -98,12 +133,12 @@
                     <tr>
                         <td>NY Pie</td>
                         <td>Waltham, MA</td>
-                        <td>0.7</td>
+                        <td>0.70</td>
                     </tr>
                     <tr>
                         <td>The Prime Deli</td>
                         <td>Waltham, MA</td>
-                        <td>0.6</td>
+                        <td>0.60</td>
                     </tr>
                     <tr>
                         <td>Natalie's Pizza</td>
@@ -123,7 +158,32 @@
                     <tr>
                         <td>The Pizza Man</td>
                         <td>Hooksett, NH</td>
-                        <td>0.74</td>
+                        <td>0.56</td>
+                    </tr>
+                    <tr>
+                        <td>Pappy's Pizza</td>
+                        <td>Manchester, NH</td>
+                        <td>0.48</td>
+                    </tr>
+                    <tr>
+                        <td>Alley Cat Pizza</td>
+                        <td>Manchester, NH</td>
+                        <td>0.68</td>
+                    </tr>
+                    <tr>
+                        <td>South End Tavern</td>
+                        <td>Manchester, NH</td>
+                        <td>0.64</td>
+                    </tr>
+                    <tr>
+                        <td>Elm House of Pizza</td>
+                        <td>Manchester, NH</td>
+                        <td>0.69</td>
+                    </tr>
+                    <tr>
+                        <td>Hot Stone Pizza</td>
+                        <td>Manchester, NH</td>
+                        <td>0.77</td>
                     </tr>
                 </tbody>
             </table>
