little bit of this, little bit of that

--- a/pizza.html
+++ b/pizza.html
@@ -183,7 +183,12 @@
                     <tr>
                         <td>Hot Stone Pizza</td>
                         <td>Manchester, NH</td>
-                        <td>0.77</td>
+                        <td>0.71</td>
+                    </tr>
+                    <tr>
+                        <td>Sal's Pizza</td>
+                        <td>Manchester, NH</td>
+                        <td>0.90</td>
                     </tr>
                 </tbody>
             </table>
