--- a/zoomwithme.html
+++ b/zoomwithme.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Nate's Custom Zoom Link</title>
-        <meta http-equiv = "refresh" content = "1; url = https://us02web.zoom.us/j/8289292778?pwd=QXBkckl2dkhETXk4bTdUamJsNGhadz09" />
+        <!-- <meta http-equiv = "refresh" content = "1; url = https://us02web.zoom.us/j/8289292778?pwd=QXBkckl2dkhETXk4bTdUamJsNGhadz09" /> -->
         <meta name="description" content="click this link to get to my zoom room"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
@@ -31,8 +31,8 @@
             <h4>- Lyle Lovett</h4>
         </section>
         <section>
-            <h4>This page should redirect in 1 second</h4>
-            <h4>If it doesn't, <a href="https://us02web.zoom.us/j/8289292778?pwd=QXBkckl2dkhETXk4bTdUamJsNGhadz09">click here</a></h4>
+            <h4>LOL I don't pay for Zoom anymore</h4>
+            <h4>But maybe this still works in 40 minute mode? <a href="https://us02web.zoom.us/j/8289292778?pwd=QXBkckl2dkhETXk4bTdUamJsNGhadz09">click here</a></h4>
         </section>
     </body>
 </html>
